docs/api/qiskit/0.24/qiskit.transpiler.passes.ApplyLayout.mdx
---
title: ApplyLayout
description: API reference for qiskit.transpiler.passes.ApplyLayout
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ApplyLayout
---

<span id="qiskit-transpiler-passes-applylayout" />

# qiskit.transpiler.passes.ApplyLayout

<Class id="qiskit.transpiler.passes.ApplyLayout" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/layout/apply_layout.py" signature="ApplyLayout(*args, **kwargs)">
  Transform a circuit with virtual qubits into a circuit with physical qubits.

  Transforms a DAGCircuit with virtual qubits into a DAGCircuit with physical qubits by applying the Layout given in property\_set. Requires either of passes to set/select Layout, e.g. SetLayout, TrivialLayout. Assumes the Layout has full physical qubits.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.ApplyLayout.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                |                                  |
  | -------------------------------------------------------------------------------------------------------------- | -------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.ApplyLayout.__init__ "qiskit.transpiler.passes.ApplyLayout.__init__")() | Initialize self.                 |
  | [`name`](#qiskit.transpiler.passes.ApplyLayout.name "qiskit.transpiler.passes.ApplyLayout.name")()             | Return the name of the pass.     |
  | [`run`](#qiskit.transpiler.passes.ApplyLayout.run "qiskit.transpiler.passes.ApplyLayout.run")(dag)             | Run the ApplyLayout pass on dag. |

  ## Attributes

  |                                                                                                                                                        |                                             |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.ApplyLayout.is_analysis_pass "qiskit.transpiler.passes.ApplyLayout.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.ApplyLayout.is_transformation_pass "qiskit.transpiler.passes.ApplyLayout.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.ApplyLayout.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.ApplyLayout.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.ApplyLayout.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.ApplyLayout.run" name="run" signature="run(dag)">
    Run the ApplyLayout pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to map.

    **Returns**

    A mapped DAG (with physical qubits).

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if no layout is found in property\_set or no full physical qubits.
  </Function>
</Class>

